--- a/styles/MainLayout.module.css
+++ b/styles/MainLayout.module.css
@@ -53,7 +53,7 @@
     margin-top: 50px;
     padding-top: 40px;
     margin: 0 auto;
-    width: 93%
+    width: 90%
   }
 }
   
